--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ Part4_Word_Similarity/get_data.py
 
 
 Part3_Text_Cluster/cached_offline/
+Part3_Text_Cluster/cached_test/
 Part3_Text_Cluster/out_kmeans.txt
 Part3_Text_Cluster/out_tf.txt
 Part3_Text_Cluster/out_tfidf.txt
