新版本的情感分析程序： new_doc.py，使用了 Word2Vec 算法

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *.doc
 *.docx
 *.DS_Store
+*.pyc
 .idea/
 
 Part1_TF-IDF/output/
@@ -42,4 +43,6 @@ Part1_TF-IDF/TF_IDF/__pycache__/
 Part4_Word_Similarity/word2vec/*.txt
 Part4_Word_Similarity/word2vec/corpus.model
 Part4_Word_Similarity/word2vec/corpus.model.bin
+
+relation_extraction/data/
 
