update the .gitignore for the new emotion analysis work

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,7 @@ Part4_Word_Similarity/word2vec/corpus.model.bin
 
 relation_extraction/data/
 
+Part5_Emotion_Analysis/htl
+Part5_Emotion_Analysis/htl_cached
+Part5_Emotion_Analysis/weibo
+Part5_Emotion_Analysis/.spyproject/
